<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/auth_padding"
    tools:context="com.project.spire.ui.auth.SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/auth_logo_width"
        android:layout_height="@dimen/auth_logo_height"
        android:layout_marginTop="@dimen/signup_logo_margin_top"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            style="@style/filled_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:enabled="false"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            style="@style/filled_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/email_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/password_pattern"
            android:layout_width="@dimen/password_pattern_toggle_size"
            android:layout_height="@dimen/password_pattern_toggle_size"
            android:layout_marginTop="@dimen/password_pattern_margin_top"
            android:layout_marginEnd="@dimen/password_pattern_margin_right"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@id/password_input"
            app:layout_constraintRight_toRightOf="@id/password_input"
            app:layout_constraintTop_toTopOf="@id/password_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input"
            style="@style/filled_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="10dp"
            android:hint="@string/username_hint"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:prefixText="\@">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="@string/signup_btn"
            app:layout_constraintTop_toBottomOf="@id/username_input" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_btn">

        </com.google.android.material.progressindicator.CircularProgressIndicator>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>