...
        android:padding="15dp"
        android:clipToPadding="false"
        android:layout_margin="20dp"
        android:elevation="10dp" >

        <TextView
            android:id="@+id/password_rule_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_popup_title"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
...
