<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/auth_padding"
    tools:context="com.project.spire.ui.auth.VerifyEmailActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/auth_logo_width"
        android:layout_height="@dimen/auth_logo_height"
        android:layout_marginTop="@dimen/signup_logo_margin_top"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        style="@style/filled_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/email_hint"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Visible after mail sent -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/verification_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/email_input">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/verification_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/verification_guide_title"
            android:textSize="@dimen/verification_guide_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/verification_code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/verification_guide">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verification_code_1"
                style="@style/filled_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verification_code_1_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/verification_code"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verification_code_2"
                style="@style/filled_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verification_code_2_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/verification_code"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verification_code_3"
                style="@style/filled_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verification_code_3_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/verification_code"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verification_code_4"
                style="@style/filled_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verification_code_4_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/verification_code"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verification_code_5"
                style="@style/filled_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verification_code_5_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/verification_code"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verification_code_6"
                style="@style/filled_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verification_code_6_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/verification_code"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verification_send_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:text="@string/verification_send_again"
            android:textSize="@dimen/verification_guide_content"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verification_code_input" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verification_send_again_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:text=""
            android:textAlignment="textStart"
            app:layout_constraintStart_toEndOf="@id/verification_send_again"
            app:layout_constraintTop_toBottomOf="@+id/verification_code_input" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/verify_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verification_send_again_timer"
            app:layout_constraintEnd_toEndOf="parent"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Visible before mail sent -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_mail_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/verify_email"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/email_input" />

    <TextView
        android:id="@+id/login_text"
        style="@style/normal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/already_signed_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/go_to_login_text_btn" />

    <TextView
        android:id="@+id/go_to_login_text_btn"
        style="@style/text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/login_text"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>